PAPP-34608 windows defender atp name updated to microsoft defender for endpoint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,4 +8,4 @@ repos:
     rev: v1.4.0
     hooks:
     -   id: detect-secrets
-        args: ['--no-verify', '--exclude-files', '^windowsdefenderatp.json$']
+        args: ['--no-verify', '--exclude-files', '^microsoftdefenderforendpoint.json$']
